# RAG

./: README.md
basic_rag_architecture/: conversationalRAG.py  history_aware_generation  hybrid-search.py  injection.py  pyproject.toml  reranker.py  retrieval.py
data-injection-pipeline/: main.py
rag_layered_architecture/: design.md  main.py  pyproject.toml
rag_layered_architecture/app/api/: chat.py  document.py  router.py
rag_layered_architecture/app/models/: chat.py  document.py
rag_layered_architecture/app/rag/: chunking_service.py  embedding_service.py  injection_service.py  retrieval_service.py
rag_layered_architecture/app/repositories/: vector_repo.py
rag_layered_architecture/app/service/: chat_service.py
