[project]
name = "data-injection-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
]
